refactor(backend/api): replace health endpoint with info endpoint
