# backend/crates/api/handler/src/health/implementation.rs
@@ -1,23 +1,0 @@
-use actix_web::{HttpResponse, get};
-use macros::handler_implementation;
-
-use super::{HealthHandler, HealthHandlerHelper, HealthHandlerResult};
-use crate::common::openapi;
-
-handler_implementation! {
-    HealthHandler as Implemented {
-        /// API status check
-        ///
-        /// Verify that API is running and ready to accept incoming requests.
-        #[openapi(
-            operation_id = "health",
-            responses(
-                (status = 200, description = "API is running"),
-            ),
-        )]
-        #[get("")]
-        health() -> HttpResponse {
-            HttpResponse::Ok().finish()
-        }
-    }
-}
